add bin-packing for batches grouping